# blackberry-karamel

./: .gitignore  CMakeLists.txt  lexer_runner
include/: lexer.hpp  parser.hpp  runner.hpp  token.hpp
include/interpreter/: builtins.hpp  evaluator.hpp  function_manager.hpp  interpreter.hpp  runner.hpp  scope.hpp  scope_manager.hpp  value.hpp
src/app/: main.cpp
src/interpreter/: builtins.cpp  evaluator.cpp  function_manager.cpp  interpreter.cpp  scope_manager.cpp  value.cpp
src/lexer/: lexer.cpp
src/parser/: parser.cpp
src/runner/: runner.cpp
